
class CCashBase(object):
	def AcceptCash(self, fCash):
		pass