import base

class CCashNormal(base.CCashBase):
	def AcceptCash(self, fCash):
		return fCash